# examples_polling

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
long_polling/: apps.py  models.py  urls.py  views.py
long_polling/migrations/: 0001_initial.py
short_polling/: apps.py  models.py  urls.py  views.py
short_polling/migrations/: 0001_initial.py  0002_rename_books_book.py
sse/: urls.py  views.py
static/js/: long_polling.js  short_polling.js
templates/long_polling/: example.html
templates/short_polling/: example.html
templates/sse/: example.html
