[tool.poetry]
name = "polling-exmaple"
version = "0.1.0"
description = ""
authors = ["DenisBayandin <deniska.bayandin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
channels = "^4.1.0"
channels-redis = "^4.2.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
